--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-
+    <h1 id="js-pswd"></h1>
   </body>
-  <script type="text/javascript" src="js/myscrit.js"></script>
+  <script type="text/javascript" src="js/myscript.js"></script>
 </html>
