--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1 id="js-pswd"></h1>
+    <div class="wrapper">
+      <h1 id="js-pswd"> <span id="ms_msg">PASSWORD GENERATOR</span> </h1>
+    </div>
   </body>
   <script type="text/javascript" src="js/myscript.js"></script>
 </html>
