--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 id="js-pswd"> <span id="ms_msg">PASSWORD GENERATOR</span> </h1>
+      <h1 id="js-pswd"> <span class="ms_msg">PASSWORD GENERATOR</span> </h1>
     </div>
   </body>
   <script type="text/javascript" src="js/myscript.js"></script>
