--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1 id="js-pswd"> <span class="ms_msg">PASSWORD GENERATOR</span> </h1>
+      <div class="ms_txt-center">
+        <h1 class="ms_msg">PASSWORD GENERATOR</h1>
+        <h2 id="js-pswd"></h2>
+      </div>
+
     </div>
   </body>
   <script type="text/javascript" src="js/myscript.js"></script>
